--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-color-spin-wheel",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.7",
   "type": "module",
   "description": "react library for color spin wheel",
   "main": "dist/index.umd.cjs",
@@ -44,5 +44,11 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.3"
+  },
+  "peerDependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
