--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-color-spin-wheel",
   "private": false,
-  "version": "0.0.19",
+  "version": "0.0.28",
   "type": "module",
   "description": "react library for color spin wheel",
   "main": "dist/index.umd.cjs",
@@ -23,11 +23,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.9",
@@ -50,5 +46,10 @@
     "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/365support/react-color-spin-wheel"
+  },
+  "homepage": "https://react-color-spin-wheel.netlify.app/"
 }
